Form: ensure glass pane of popup window is drawn behind message box
337391

--- a/eclipse-scout-core/src/main.less
+++ b/eclipse-scout-core/src/main.less
@@ -520,6 +520,7 @@ a,
 .scout > .glasspane,
 .scout > .busyindicator,
 .scout > .dialog,
+.scout > .popup-window,
 .scout > .messagebox,
 .scout > .file-chooser,
 .scout > .tooltip,
